; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_tlv320aic32x4-clk.c_clk_aic32x4_div_unprepare.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_tlv320aic32x4-clk.c_clk_aic32x4_div_unprepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk_aic32x4 = type { i32, i32 }

@AIC32X4_DIVEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clk_hw*)* @clk_aic32x4_div_unprepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clk_aic32x4_div_unprepare(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.clk_aic32x4*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %4 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %5 = call %struct.clk_aic32x4* @to_clk_aic32x4(%struct.clk_hw* %4)
  store %struct.clk_aic32x4* %5, %struct.clk_aic32x4** %3, align 8
  %6 = load %struct.clk_aic32x4*, %struct.clk_aic32x4** %3, align 8
  %7 = getelementptr inbounds %struct.clk_aic32x4, %struct.clk_aic32x4* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.clk_aic32x4*, %struct.clk_aic32x4** %3, align 8
  %10 = getelementptr inbounds %struct.clk_aic32x4, %struct.clk_aic32x4* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @AIC32X4_DIVEN, align 4
  %13 = call i32 @regmap_update_bits(i32 %8, i32 %11, i32 %12, i32 0)
  ret void
}

declare dso_local %struct.clk_aic32x4* @to_clk_aic32x4(%struct.clk_hw*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
